feat: Add PlaceholderAPI support and bStats metrics
Integrates PlaceholderAPI for item names and lores (parsed on give/copy) and adds several custom bStats metrics for usage statistics.

- Added PlaceholderAPI dependency to `pom.xml` and `softdepend` to `plugin.yml`.
- Added check for PlaceholderAPI on plugin enable in `BuffedItems.java`.
- Implemented PlaceholderAPI parsing in `Commands.java` for the `/bi give` command (placeholders are resolved based on the receiving player at the time the command is run).
- Implemented PlaceholderAPI parsing in `ItemEditorMenu.java` for the "Get Test Copy" button (placeholders are resolved based on the player clicking the button).
- Added "(TEST COPY)" suffix to the display name and reminder lines to the lore for items generated by the "Get Test Copy" button.
- Added bStats `Metrics` instance storage in `BuffedItems.java`.
- Added custom bStats metrics:
    - `total_items` (SingleLineChart)
    - `valid_items` (SingleLineChart)
    - `items_with_errors` (SingleLineChart)
- Fixed default lore generation in `ConfigManager.createNewItem` to correctly include a blank line.